@@ -21,10 +21,7 @@
 
 #include <string.h>
 
-#include <rivendell/rd_listlog.h>
-#include <rivendell/rd_listlogs.h>
-#include <rivendell/rd_savelog.h>
-
+#include "config.h"
 #include "datetime.h"
 #include "log.h"
 
@@ -185,9 +182,8 @@ bool Log::load(const QString &name,QString *err_msg)
   unsigned log_quan=0;
   int err=0;
 
-  if((err=RD_ListLogs(&loghdr,log_servername.toUtf8(),log_username.toUtf8(),
-		      log_password.toUtf8(),"","",name.toUtf8(),false,&log_quan))!=0) {
-    *err_msg=QString().sprintf("RD_ListLog() failed [code: %d]",err);
+  if((err=cnf->listLogs(&loghdr,&log_quan,"",name,false))!=0) {
+    *err_msg=QString().sprintf("RD_ListLogs() failed [code: %d]",err);
     return false;
   }
   if(log_quan==0) {
@@ -225,8 +221,7 @@ bool Log::load(const QString &name,QString *err_msg)
   struct rd_logline *ll=NULL;
   unsigned ll_quan=0;
 
-  if((err=RD_ListLog(&ll,log_servername.toUtf8(),log_username.toUtf8(),
-		     log_password.toUtf8(),"",name.toUtf8(),&ll_quan))!=0) {
+  if((err=cnf->listLog(&ll,&ll_quan,log_name)!=0)) {
     *err_msg=QString().sprintf("RD_ListLog() failed [code: %d]",err);
     return false;
   }
@@ -372,9 +367,7 @@ bool Log::save(const QString &name,QString *err_msg)
     strncpy(ll[i].logline_ext_annc_type,at(i).extAnncType(),8);
   }
 
-  if((err=RD_SaveLog(&loghdr,ll,size(),log_servername.toUtf8(),
-		     log_username.toUtf8(),
-		     log_password.toUtf8(),"",name.toUtf8()))!=0) {
+  if((err=cnf->saveLog(&loghdr,ll,size(),name.toUtf8()))!=0) {
     *err_msg=QString().sprintf("RD_SaveLog() failed [code: %d]",err);
     return false;
   }
