@@ -19,8 +19,6 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-#include <rivendell/rd_listservices.h>
-
 #include <QMessageBox>
 
 #include "addlogdialog.h"
@@ -66,13 +64,9 @@ int AddLogDialog::exec(QString *svcname,QString *logname)
   edit_service_name=svcname;
   edit_log_name=logname;
 
-  if((err=RD_ListServices(&svc,cnf->serverHostname().toUtf8(),
-			  cnf->serverUsername().toUtf8(),
-			  cnf->serverPassword().toUtf8(),
-			  cnf->serverTicket().toUtf8(),
-			  0,&svc_quan))!=0) {
+  if((err=cnf->listServices(&svc,&svc_quan,false))!=0) {
     QMessageBox::warning(this,tr("RDLogEdit - Error"),
-			 tr("Error in rd_listservices() call")+
+			 tr("Error in RD_ListServices() call")+
 			 " ["+tr("Error")+QString().sprintf(" %d].",err));
   }
   edit_servicename_box->clear();
